# agent-registry-program

./: Anchor.toml  PROGRAM_IDS.md  README.md  package-lock.json  package.json
programs/agent-platform/: Cargo.toml
programs/agent-platform/src/: lib.rs
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: lib.rs
programs/agent-staking/: Cargo.toml
programs/agent-staking/src/: lib.rs
scripts/: test-atomic-creation.ts  test-devnet-complete.ts  test-devnet-with-sdk.ts
tests/: 1-agent-registry.ts  2-staking.ts  3-register-devnet.ts  4-platform.ts  5-sdk-integration.ts  6-sdk-clean.ts  7-sdk-only.ts  8-minimal-sdk.ts
