[package]
name = "agent-platform"
version = "0.1.0"
description = "Unified Solana Agent Platform (Registry + Staking)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_platform"

[features]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.31.1", features = [] }
anchor-spl = { version = "0.31.1", features = [] }
bincode = "1.3.3"
