[package]
name = "agent-staking"
version = "0.1.0"
description = "Agent staking program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
agent-registry = { path = "../agent-registry", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = "allow"
deprecated = "allow"


